[feat] gcs로직 출력 잘못나오던 것 수정.
*개선사항
- 메모리 차지하는 변수 화면에 보여지는 컴포넌트 개발해야함
- GC일어나면 화면에 보여지는 것 사라져야함
- 현재는 react기반에서만 동작

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,7 +50,7 @@
       "/public/*.ts",
       ".next/types/**/*.ts",
       "out/types/**/*.ts"
-    ],
+, "src/shared/garbage-collection-stalker.tsx"    ],
     "exclude": [
       "node_modules",
       "**/*.test.tsx",
